feat(skill curator): LLM judge configuration and evaluation refactor